1.2.x/_sources/examples/pylab_examples/index.txt
.. _pylab_examples-examples-index:

##############################################
pylab_examples Examples
##############################################

.. htmlonly::

    :Release: |version|
    :Date: |today|

.. toctree::
    :maxdepth: 1

    accented_text <accented_text.rst>
    agg_buffer_to_array <agg_buffer_to_array.rst>
    alignment_test <alignment_test.rst>
    anchored_artists <anchored_artists.rst>
    animation_demo <animation_demo.rst>
    annotation_demo <annotation_demo.rst>
    annotation_demo2 <annotation_demo2.rst>
    annotation_demo3 <annotation_demo3.rst>
    anscombe <anscombe.rst>
    arctest <arctest.rst>
    arrow_demo <arrow_demo.rst>
    aspect_loglog <aspect_loglog.rst>
    axes_demo <axes_demo.rst>
    axes_props <axes_props.rst>
    axes_zoom_effect <axes_zoom_effect.rst>
    axhspan_demo <axhspan_demo.rst>
    axis_equal_demo <axis_equal_demo.rst>
    bar_stacked <bar_stacked.rst>
    barb_demo <barb_demo.rst>
    barchart_demo <barchart_demo.rst>
    barchart_demo2 <barchart_demo2.rst>
    barcode_demo <barcode_demo.rst>
    barh_demo <barh_demo.rst>
    boxplot_demo <boxplot_demo.rst>
    boxplot_demo2 <boxplot_demo2.rst>
    boxplot_demo3 <boxplot_demo3.rst>
    break <break.rst>
    broken_axis <broken_axis.rst>
    broken_barh <broken_barh.rst>
    centered_ticklabels <centered_ticklabels.rst>
    clippedline <clippedline.rst>
    cohere_demo <cohere_demo.rst>
    color_by_yvalue <color_by_yvalue.rst>
    color_demo <color_demo.rst>
    colorbar_tick_labelling_demo <colorbar_tick_labelling_demo.rst>
    colours <colours.rst>
    contour_demo <contour_demo.rst>
    contour_image <contour_image.rst>
    contour_label_demo <contour_label_demo.rst>
    contourf_demo <contourf_demo.rst>
    contourf_hatching <contourf_hatching.rst>
    contourf_log <contourf_log.rst>
    coords_demo <coords_demo.rst>
    coords_report <coords_report.rst>
    csd_demo <csd_demo.rst>
    cursor_demo <cursor_demo.rst>
    custom_cmap <custom_cmap.rst>
    custom_figure_class <custom_figure_class.rst>
    custom_ticker1 <custom_ticker1.rst>
    customize_rc <customize_rc.rst>
    dannys_example <dannys_example.rst>
    dash_control <dash_control.rst>
    dashpointlabel <dashpointlabel.rst>
    data_helper <data_helper.rst>
    date_demo1 <date_demo1.rst>
    date_demo2 <date_demo2.rst>
    date_demo_convert <date_demo_convert.rst>
    date_demo_rrule <date_demo_rrule.rst>
    date_index_formatter <date_index_formatter.rst>
    demo_agg_filter <demo_agg_filter.rst>
    demo_annotation_box <demo_annotation_box.rst>
    demo_bboximage <demo_bboximage.rst>
    demo_ribbon_box <demo_ribbon_box.rst>
    demo_text_path <demo_text_path.rst>
    demo_text_rotation_mode <demo_text_rotation_mode.rst>
    demo_tight_layout <demo_tight_layout.rst>
    dolphin <dolphin.rst>
    ellipse_collection <ellipse_collection.rst>
    ellipse_demo <ellipse_demo.rst>
    ellipse_rotated <ellipse_rotated.rst>
    equal_aspect_ratio <equal_aspect_ratio.rst>
    errorbar_demo <errorbar_demo.rst>
    errorbar_limits <errorbar_limits.rst>
    errorbar_subsample <errorbar_subsample.rst>
    fancyarrow_demo <fancyarrow_demo.rst>
    fancybox_demo <fancybox_demo.rst>
    fancybox_demo2 <fancybox_demo2.rst>
    fancytextbox_demo <fancytextbox_demo.rst>
    figimage_demo <figimage_demo.rst>
    figlegend_demo <figlegend_demo.rst>
    figure_title <figure_title.rst>
    fill_between_demo <fill_between_demo.rst>
    fill_betweenx_demo <fill_betweenx_demo.rst>
    fill_demo <fill_demo.rst>
    fill_demo2 <fill_demo2.rst>
    fill_spiral <fill_spiral.rst>
    filledmarker_demo <filledmarker_demo.rst>
    finance_demo <finance_demo.rst>
    finance_work2 <finance_work2.rst>
    findobj_demo <findobj_demo.rst>
    font_table_ttf <font_table_ttf.rst>
    fonts_demo <fonts_demo.rst>
    fonts_demo_kw <fonts_demo_kw.rst>
    ganged_plots <ganged_plots.rst>
    geo_demo <geo_demo.rst>
    ginput_demo <ginput_demo.rst>
    ginput_manual_clabel <ginput_manual_clabel.rst>
    gradient_bar <gradient_bar.rst>
    griddata_demo <griddata_demo.rst>
    hatch_demo <hatch_demo.rst>
    hexbin_demo <hexbin_demo.rst>
    hexbin_demo2 <hexbin_demo2.rst>
    hist2d_demo <hist2d_demo.rst>
    hist_colormapped <hist_colormapped.rst>
    histogram_demo <histogram_demo.rst>
    histogram_demo_extended <histogram_demo_extended.rst>
    hline_demo <hline_demo.rst>
    hyperlinks <hyperlinks.rst>
    image_clip_path <image_clip_path.rst>
    image_demo <image_demo.rst>
    image_demo2 <image_demo2.rst>
    image_demo3 <image_demo3.rst>
    image_interp <image_interp.rst>
    image_masked <image_masked.rst>
    image_nonuniform <image_nonuniform.rst>
    image_origin <image_origin.rst>
    image_slices_viewer <image_slices_viewer.rst>
    integral_demo <integral_demo.rst>
    interp_demo <interp_demo.rst>
    invert_axes <invert_axes.rst>
    layer_images <layer_images.rst>
    legend_auto <legend_auto.rst>
    legend_demo <legend_demo.rst>
    legend_demo2 <legend_demo2.rst>
    legend_demo3 <legend_demo3.rst>
    legend_demo4 <legend_demo4.rst>
    legend_demo_custom_handler <legend_demo_custom_handler.rst>
    legend_scatter <legend_scatter.rst>
    legend_translucent <legend_translucent.rst>
    line_collection <line_collection.rst>
    line_collection2 <line_collection2.rst>
    line_styles <line_styles.rst>
    load_converter <load_converter.rst>
    loadrec <loadrec.rst>
    log_bar <log_bar.rst>
    log_demo <log_demo.rst>
    log_test <log_test.rst>
    logo <logo.rst>
    major_minor_demo1 <major_minor_demo1.rst>
    major_minor_demo2 <major_minor_demo2.rst>
    manual_axis <manual_axis.rst>
    marker_path <marker_path.rst>
    masked_demo <masked_demo.rst>
    mathtext_demo <mathtext_demo.rst>
    mathtext_examples <mathtext_examples.rst>
    matplotlib_icon <matplotlib_icon.rst>
    matshow <matshow.rst>
    movie_demo <movie_demo.rst>
    mri_demo <mri_demo.rst>
    mri_with_eeg <mri_with_eeg.rst>
    multi_image <multi_image.rst>
    multicolored_line <multicolored_line.rst>
    multiline <multiline.rst>
    multipage_pdf <multipage_pdf.rst>
    multiple_figs_demo <multiple_figs_demo.rst>
    multiple_yaxis_with_spines <multiple_yaxis_with_spines.rst>
    nan_test <nan_test.rst>
    newscalarformatter_demo <newscalarformatter_demo.rst>
    patheffect_demo <patheffect_demo.rst>
    pcolor_demo <pcolor_demo.rst>
    pcolor_demo2 <pcolor_demo2.rst>
    pcolor_log <pcolor_log.rst>
    pcolor_small <pcolor_small.rst>
    pie_demo <pie_demo.rst>
    pie_demo2 <pie_demo2.rst>
    plotfile_demo <plotfile_demo.rst>
    polar_bar <polar_bar.rst>
    polar_demo <polar_demo.rst>
    polar_legend <polar_legend.rst>
    polar_scatter <polar_scatter.rst>
    poormans_contour <poormans_contour.rst>
    print_stdout <print_stdout.rst>
    psd_demo <psd_demo.rst>
    psd_demo2 <psd_demo2.rst>
    psd_demo3 <psd_demo3.rst>
    psd_demo_complex <psd_demo_complex.rst>
    pstest <pstest.rst>
    pythonic_matplotlib <pythonic_matplotlib.rst>
    quadmesh_demo <quadmesh_demo.rst>
    quiver_demo <quiver_demo.rst>
    scatter_custom_symbol <scatter_custom_symbol.rst>
    scatter_demo <scatter_demo.rst>
    scatter_demo2 <scatter_demo2.rst>
    scatter_hist <scatter_hist.rst>
    scatter_masked <scatter_masked.rst>
    scatter_profile <scatter_profile.rst>
    scatter_star_poly <scatter_star_poly.rst>
    scatter_symbol <scatter_symbol.rst>
    set_and_get <set_and_get.rst>
    shading_example <shading_example.rst>
    shared_axis_across_figures <shared_axis_across_figures.rst>
    shared_axis_demo <shared_axis_demo.rst>
    show_colormaps <show_colormaps.rst>
    simple_plot <simple_plot.rst>
    simple_plot_fps <simple_plot_fps.rst>
    specgram_demo <specgram_demo.rst>
    spine_placement_demo <spine_placement_demo.rst>
    spy_demos <spy_demos.rst>
    stackplot_demo <stackplot_demo.rst>
    stem_plot <stem_plot.rst>
    step_demo <step_demo.rst>
    stix_fonts_demo <stix_fonts_demo.rst>
    stock_demo <stock_demo.rst>
    streamplot_demo <streamplot_demo.rst>
    streamplot_with_mask <streamplot_with_mask.rst>
    subplot_demo <subplot_demo.rst>
    subplot_toolbar <subplot_toolbar.rst>
    subplots_adjust <subplots_adjust.rst>
    subplots_demo <subplots_demo.rst>
    symlog_demo <symlog_demo.rst>
    system_monitor <system_monitor.rst>
    table_demo <table_demo.rst>
    tex_demo <tex_demo.rst>
    tex_unicode_demo <tex_unicode_demo.rst>
    text_handles <text_handles.rst>
    text_rotation <text_rotation.rst>
    text_rotation_relative_to_line <text_rotation_relative_to_line.rst>
    text_themes <text_themes.rst>
    to_numeric <to_numeric.rst>
    toggle_images <toggle_images.rst>
    transoffset <transoffset.rst>
    tricontour_demo <tricontour_demo.rst>
    tricontour_vs_griddata <tricontour_vs_griddata.rst>
    tripcolor_demo <tripcolor_demo.rst>
    triplot_demo <triplot_demo.rst>
    unicode_demo <unicode_demo.rst>
    usetex_baseline_test <usetex_baseline_test.rst>
    usetex_demo <usetex_demo.rst>
    usetex_fonteffects <usetex_fonteffects.rst>
    vertical_ticklabels <vertical_ticklabels.rst>
    vline_demo <vline_demo.rst>
    webapp_demo <webapp_demo.rst>
    xcorr_demo <xcorr_demo.rst>
    zorder_demo <zorder_demo.rst>
